--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,11 @@
 <html>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	</head>
 	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 	<body>
-		<div class="app">
-		</div>
+		<div class="app"></div>
+		<script src="bundle.js"></script>
 	</body>
 </html>
