--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
-	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+	</head>	
 	<body>
-		<div class="app"></div>
+		<div id="app"></div>
 		<script src="bundle.js"></script>
 	</body>
 </html>
