--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>	
 	<body>
-		<div id="app"></div>
+		<div id="react-container"></div>
 		<script src="bundle.js"></script>
 	</body>
 </html>
